sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:10: error: ')' expected but '}' found.
    }
    ^